--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@ title: Vijay Krishna Palepu
 	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Program Analysis</p>
 	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Data Analysis</p>
 	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Research</p>
-	<p style="margin-left: 0.45em">Writing</p>
+	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Writing</p>
+	<p style="margin-left: 0.45em">and more recently, Amateur Electronics and Robotics</p>
 </div>
 
 <div class="stretch reallytiny" style="margin-left:0.75em">
 	<p style="margin-bottom: -2.55em">Experiments:</p>
 	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Graph Scope: <a href="http://graphscope.glitch.me/">http://graphscope.glitch.me/</a></p>
-	<p style="margin-left: 0.45em">Today We Lack: <a href="http://treestrokes.github.io/today-we-lack/index.html">http://treestrokes.github.io/today-we-lack/index.html</a></p>
+	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Today We Lack: <a href="http://treestrokes.github.io/today-we-lack/index.html">http://treestrokes.github.io/today-we-lack/index.html</a></p>
+	<p style="margin-left: 0.45em">HulkBot Jr.: <a href="{{ site.url }}/hulkbotjr.html">{{ site.url }}/hulkbotjr.html</a></p>
 </div>
 
 <div class="stretch reallytiny">
@@ -41,5 +43,5 @@ title: Vijay Krishna Palepu
 </div>
 
 <div class="stretch reallytiny">
-	<strong>Updated on:</strong> Aug 31 2018 (still a work in progress)
+	<strong>Updated on:</strong> Nov 04 2018 (still a work in progress)
 </div>
