--- a/hulkbotjr.html
+++ b/hulkbotjr.html
@@ -5,9 +5,20 @@ title: HulkBot Jr.
 
 <div class="plain stretch">
     <img style="float: inherit; margin: 10px;" src="{{ site.url }}/images/hulkbotjr.jpg" height="50%" />
-    <video style="float: inherit; margin: 10px;" controls="controls" width="400" height="600" 
-       name="Video Name" src="{{ site.url }}/images/hulkbotjr.MOV"></video>
-    Weighing 495g, HulkBot Jr. is a Bluetooth controlled SumoBot that has wicked navigation controls.
+
+    Weighing 495g, HulkBot Jr. is a Bluetooth controlled SumoBot that has wicked navigation controls. 
+    An Arduino powers this little robot, and its navigation is controlled with a <a href="http://johnny-five.io" target="_blank">JohnnyFive</a>-enabled Javascript code snippet that can be run via Node.JS on any computer that can run Node.JS. There are two servo motors that make the wheels go round. The bot can either turn, or go back/forward at any given time -- it cannot do both simultaneously. A 15V power-supply via bunch of AA-batteries power the Arduino, the servos and a Bluetooth HC-05 receiver.<br>
+    I, along with two other smart software engineers at Microsoft, built this little bot as part of a week-long hackathon. This was my first time building anything using electronics -- since, I have always taken refuge in Software and left the Hardware details to more interested and capable people.<br>
+    This was primarily an exercise in learning new skills -- and in that respect it was a success.
+    I personally, learnt how to work with Arduinos, learnt a thing or two about WiFi and Bluetooth, worked with JohnnyFive (the JS library that interfaces with standard firmware on an Arduinos), and used a 3D printer for the first time in my life, and got to know how to use Amazon Lockers (because you cannot go to an electronic store to buy silicon chips of your choice and requirement in Silicon Valley).<br>
+    In a series of future posts on this site, I will detail more about this bot ... in part the breakdown of the different parts, and details of what we plan to do in the future with this fella, and how HulkBot Jr. fared in the SumoBot Wars that we participated in.
+
+    <iframe style="float: inherit; margin-top: 10px; margin-bottom: 10px; margin-left: -75px; margin-right: -75px" src="https://player.vimeo.com/video/298865217" width="50%" height="50%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+
+    <!-- <video style="float: inherit; margin: 10px;" controls="controls" width="400" height="600"  -->
+       <!-- name="Video Name" src="{{ site.url }}/images/hulkbotjr.MOV"></video> -->
+    
 
 
 
