Covid19 Testing Tracker

--- a/index.html
+++ b/index.html
@@ -3,37 +3,43 @@ layout: default
 title: Vijay Krishna Palepu
 ---
 
-<div class="stretch tiny" style="margin-left:0.5em">
-	Vijay Krishna <b>Palepu</b><br>
+<div class="stretch big" style="margin-left:0.5em;">
+	<span style="margin-right: 0.5em">Vijay Krishna <b>Palepu</b></span>
+	<span style="margin-top:1.5em" class="reallytiny">
+		<a href="{{ site.url }}/cv.html" title="Resume and C.V." class="icon-file-pdf">
+			CV and  Resume
+			<!-- <img class="round_icon" src="{{ site.url }}/images/cv.svg"> -->
+		</a>
+	</span>
 </div>
 
-<div class="stretch reallytiny" style="margin-left:0.75em; margin-top: -1.95em">
-	<p style="margin-bottom: -2.55em">Occupations:</p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Software Lackey at Microsoft (All opinions are my own and not the views of my employer)</p>
+<div class="stretch tiny" style="margin-left:0.75em; margin-top: 2em">
+	<p style="margin-bottom: -1.75em">Occupations:</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Software Lackey at Microsoft (All views and opinions on this website are my own and not of my employer.)</p>
 	<p style="margin-left: 0.45em">Software Wanderer in my spare time</p>
 </div>
 
-<div class="stretch reallytiny" style="margin-left:0.75em;">
-	<p style="margin-bottom: -2.55em">Studied at:</p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Spider Lab</p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">University of California, Irvine</p>
+<div class="stretch tiny" style="margin-left:0.75em;">
+	<p style="margin-bottom: -1.75em">Studied at:</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Spider Lab</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">University of California, Irvine</p>
 	<p style="margin-left: 0.45em">University of Pune</p>
 </div>
 
-<div class="stretch reallytiny" style="margin-left:0.75em">
-	<p style="margin-bottom: -2.55em">Labors of Love:</p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Software Visualizations</p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Program Analysis</p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Data Analysis</p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Research</p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Writing</p>
+<div class="stretch tiny" style="margin-left:0.75em">
+	<p style="margin-bottom: -1.75em">Labors of Love:</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Software Visualizations</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Program Analysis</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Data Analysis</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Research</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Writing</p>
 	<p style="margin-left: 0.45em">and more recently, Amateur Electronics and Robotics</p>
 </div>
 
-<div class="stretch reallytiny" style="margin-left:0.75em">
-	<p style="margin-bottom: -2.55em">Experiments:</p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Graph Scope: <a href="http://graphscope.glitch.me/">http://graphscope.glitch.me/</a></p>
-	<p style="margin-bottom: -2.55em; margin-left: 0.45em">Today We Lack: <a href="http://treestrokes.github.io/today-we-lack/index.html">http://treestrokes.github.io/today-we-lack/index.html</a></p>
+<div class="stretch tiny" style="margin-left:0.75em">
+	<p style="margin-bottom: -1.75em">Experiments:</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Graph Scope: <a href="http://graphscope.glitch.me/">http://graphscope.glitch.me/</a></p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Today We Lack: <a href="http://treestrokes.github.io/today-we-lack/index.html">http://treestrokes.github.io/today-we-lack/index.html</a></p>
 	<p style="margin-left: 0.45em">HulkBot Jr.: <a href="{{ site.url }}/hulkbotjr.html">{{ site.url }}/hulkbotjr.html</a></p>
 </div>
 
