Indexing the Covid19 tracker on the front pange

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ title: Vijay Krishna Palepu
 
 <div class="stretch tiny" style="margin-left:0.75em">
 	<p style="margin-bottom: -1.75em">Experiments:</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Covid19 Testing Tracker: <a href="./covid19-india-testing">COVID 19 Testing in India</a></p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Graph Scope: <a href="http://graphscope.glitch.me/">http://graphscope.glitch.me/</a></p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Today We Lack: <a href="http://treestrokes.github.io/today-we-lack/index.html">http://treestrokes.github.io/today-we-lack/index.html</a></p>
 	<p style="margin-left: 0.45em">HulkBot Jr.: <a href="{{ site.url }}/hulkbotjr.html">{{ site.url }}/hulkbotjr.html</a></p>
