--- a/cerebro.html
+++ b/cerebro.html
@@ -11,6 +11,26 @@ title: Cerebro
     Cerebro, formerly known as "The Brain", reveals clusters of source code that co-execute to produce behavioral features of the program throughout and within executions. We created a clustered visualization of source-code that is informed by dynamic control flow of multiple executions; each cluster represents commonly interacting logic that composes software features. In addition, we render individual executions atop the clustered multiple-execution visualization as user-controlled animations to reveal characteristics of specific executions—these animations may provide exemplars for the clustered features and provide chronology for those behavioral features, or they may reveal anomalous behaviors that do not fit with the overall operational profile of most executions. Both the clustered multiple-execution view and the animated individual-execution view provide insights for the constituent behaviors within executions that compose behaviors of whole executions. Inspired by neural imaging of human brains of people who were subjected to various external stimuli, we designed and implemented Cerebro to reveal program activity during execution. The result has revealed the principal behaviors of execution. Those behaviors were revealed to be (in some cases) cohesive, modular source-code structures and (in other cases) cross-cutting, emergent behaviors involving multiple modules.
     
     <hr class="thinblue">
+    <h2>Gallery</h2>
+
+    <h3>NanoXML</h3>
+    <img src="images/brains/thebrain-nanoxml.png" alt="">
+    <img src="images/brains/nanoxml-color-1-4.png" alt="">
+    <img src="images/brains/nanoxml-white-1-4.png" alt="">
+
+    <h3>JPacMac</h3>
+    <img src="images/brains/thebrain-jpacman.png" alt="">
+    <img src="images/brains/jpacman-color-2-3.png" alt="">
+    <img src="images/brains/jpacman-white-2-3.png" alt="">
+
+    <h3>JavaC</h3>
+    <img src="images/brains/thebrain-javac.png" alt="">
+    <img src="images/brains/javac-color-1-4.png" alt="">
+    <img src="images/brains/javac-white-1-4.png" alt="">
+
+    <img src="images/brains/thebrain-javac-early.png" alt="">
+
+    <hr class="thinblue">
 
     Also: check out some of my recent experiments with projecting force directed graphs in three-dimensional spaces: Graph Scope: <a href="http://graphscope.glitch.me/" target="_blank">http://graphscope.glitch.me/</a>
 </div>
