--- a/cerebro.html
+++ b/cerebro.html
@@ -15,18 +15,18 @@ title: Cerebro
 
     <h3>NanoXML</h3>
     <img src="images/brains/thebrain-nanoxml.png" alt="">
-    <img src="images/brains/nanoxml-color-1-4.png" alt="">
-    <img src="images/brains/nanoxml-white-1-4.png" alt="">
+    <img style="background-color:#0a0a0a;" src="images/brains/nanoxml-color-1-4.png" alt="">
+    <img style="background-color:#0a0a0a;" src="images/brains/nanoxml-white-1-4.png" alt="">
 
     <h3>JPacMac</h3>
     <img src="images/brains/thebrain-jpacman.png" alt="">
-    <img src="images/brains/jpacman-color-2-3.png" alt="">
-    <img src="images/brains/jpacman-white-2-3.png" alt="">
+    <img style="background-color:#0a0a0a;" src="images/brains/jpacman-color-2-3.png" alt="">
+    <img style="background-color:#0a0a0a;" src="images/brains/jpacman-white-2-3.png" alt="">
 
     <h3>JavaC</h3>
     <img src="images/brains/thebrain-javac.png" alt="">
-    <img src="images/brains/javac-color-1-4.png" alt="">
-    <img src="images/brains/javac-white-1-4.png" alt="">
+    <img style="background-color:#0a0a0a;" src="images/brains/javac-color-1-4.png" alt="">
+    <img style="background-color:#0a0a0a;" src="images/brains/javac-white-1-4.png" alt="">
 
     <img src="images/brains/thebrain-javac-early.png" alt="">
 
