--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@ title: Vijay Krishna Palepu
 <div class="stretch tiny" style="margin-left:0.75em; margin-top: 2em">
 	<p style="margin-bottom: -1.75em">Occupations:</p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Software Lackey at Microsoft (All views and opinions on this website are my own and not of my employer.)</p>
-	<p style="margin-left: 0.45em">Software Wanderer in my spare time</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Software Wanderer in my spare time</p>
 </div>
+
+<br/>
 
 <div class="stretch tiny" style="margin-left:0.75em;">
 	<p style="margin-bottom: -1.75em">Studied at:</p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Spider Lab</p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">University of California, Irvine</p>
-	<p style="margin-left: 0.45em">University of Pune</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">University of Pune</p>
 </div>
+
+<br/>
 
 <div class="stretch tiny" style="margin-left:0.75em">
 	<p style="margin-bottom: -1.75em">Labors of Love:</p>
@@ -33,16 +37,29 @@ title: Vijay Krishna Palepu
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Data Analysis</p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Research</p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Writing</p>
-	<p style="margin-left: 0.45em">and more recently, Amateur Electronics and Robotics</p>
 </div>
+
+<br/>
+
+<div class="stretch tiny" style="margin-left:0.75em">
+	<p style="margin-bottom: -1.75em">Writing (again):</p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Blog 🪵: <a href="https://vkrishnapalepu.medium.com">vkrishnapalepu@medium</a></p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Cooking from Home, During Working From Home: 🍳<a href="https://medium.com/cfh-during-wfh">CFH During WFH</a></p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Newsletter 🗞: <a href="https://www.getrevue.co/profile/vkrishnapalepu">Midnight Letters 🌖</a></p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Notes: <a href="https://softwarenotes.substack.com">Software Notes 📚</a></p>
+</div>
+
+<br/>
 
 <div class="stretch tiny" style="margin-left:0.75em">
 	<p style="margin-bottom: -1.75em">Experiments:</p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Covid19 Testing Tracker: <a href="./covid19-india-testing">COVID 19 Testing in India</a></p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Graph Scope: <a href="http://graphscope.glitch.me/">http://graphscope.glitch.me/</a></p>
 	<p style="margin-bottom: -1.75em; margin-left: 0.45em">Today We Lack: <a href="http://treestrokes.github.io/today-we-lack/index.html">http://treestrokes.github.io/today-we-lack/index.html</a></p>
-	<p style="margin-left: 0.45em">HulkBot Jr.: <a href="{{ site.url }}/hulkbotjr.html">{{ site.url }}/hulkbotjr.html</a></p>
+	<p style="margin-bottom: -1.75em; margin-left: 0.45em">HulkBot Jr.: <a href="{{ site.url }}/hulkbotjr.html">{{ site.url }}/hulkbotjr.html</a></p>
 </div>
+
+<br/>
 
 <div class="stretch reallytiny">
 	<strong>Credits:</strong>
