medium: traffic light waves

--- a/instagram/index.html
+++ b/instagram/index.html
@@ -7,6 +7,7 @@ title: Vijay Krishna Palepu
 
 <div style="display: flex; flex-wrap: wrap;margin-bottom: -250px;">
 <!-- <div style="margin-bottom: -250px;"> -->
+    <a style="float: left;" class="m-story" href="https://medium.com/snap-shots/traffic-light-waves-c5eaf67c2600">Traffic Light Waves</a>
     <a style="float: left;" class="m-story" href="https://medium.com/p/a8f9f8679661">From the Couch and Balcony</a>
     <a style="float: left;" class="m-story" href="https://medium.com/snap-shots/shadow-geometry-f8e7b64987ed">Shadow Geometry</a>
     <a style="float: left;" class="m-story" href="https://medium.com/snap-shots/signs-and-skies-2d6a79694d5d">Signs and Skies</a>
