--- a/instagram/index.html
+++ b/instagram/index.html
@@ -7,6 +7,8 @@ title: Vijay Krishna Palepu
 
 <div style="display: flex; flex-wrap: wrap;margin-bottom: -250px;">
 <!-- <div style="margin-bottom: -250px;"> -->
+    
+    <a style="float: left;" class="m-story" href="https://medium.com/cfh-during-wfh/pan-dish-open-flame-okra-45f59a284f74">Pan Dish: Open Flame Okra</a>
     <a style="float: left;" class="m-story" href="https://medium.com/snap-shots/traffic-light-waves-c5eaf67c2600">Traffic Light Waves</a>
     <a style="float: left;" class="m-story" href="https://medium.com/p/a8f9f8679661">From the Couch and Balcony</a>
     <a style="float: left;" class="m-story" href="https://medium.com/snap-shots/shadow-geometry-f8e7b64987ed">Shadow Geometry</a>
