--- a/instagram/index.html
+++ b/instagram/index.html
@@ -8,6 +8,8 @@ title: Vijay Krishna Palepu
 <div style="display: flex; flex-wrap: wrap;margin-bottom: -250px;">
 <!-- <div style="margin-bottom: -250px;"> -->
     
+    
+    <a style="float: left;" class="m-story" href="https://medium.com/snap-shots/blind-shadows-454ea803d5ef">Blind Shadows</a>
     <a style="float: left;" class="m-story" href="https://medium.com/snap-shots/cotton-candy-sunset-6dd1cae6c843">Cotton Candy Sunset</a>
     <a style="float: left;" class="m-story" href="https://medium.com/cfh-during-wfh/pan-dish-open-flame-okra-45f59a284f74">Pan Dish: Open Flame Okra</a>
     <a style="float: left;" class="m-story" href="https://medium.com/snap-shots/traffic-light-waves-c5eaf67c2600">Traffic Light Waves</a>
